fix: Update spacing between map and restaurant header
The restaurant name header now looks better on smaller screens,
especially when the map is still in static mode.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -419,4 +419,8 @@ nav h1 a {
   #restaurant-address, td {
     font-size: 1.2rem;
   }
+
+  #restaurant-container, #reviews-container {
+    padding: 85px 0px 30px;
+  }
 }
